--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<h1>Advanced Bootstrap Tutorials with SASS!</h1>	
 </body>
 </html>
