ignore sass cache files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,73 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Advanced Bootstrap Tutorials with SASS!</h1>	
+	<header class="site-header">
+		<div class="site-logo">
+			<a href="#">easydevtuts</a>
+		</div>
+		<nav class="site-nav">
+			<a href="#">home</a>
+			<a href="#">about</a>
+			<a href="#">contact</a>
+		</nav>
+	</header>
+	<div class="site-content">
+		<div class="featured">
+			<h1>Advanced Bootstrap Tutorials with SASS!</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, obcaecati, asperiores, doloremque, quos a vitae incidunt sit consequuntur quia dignissimos sunt alias ut soluta quod sapiente quo fuga accusantium consequatur!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque aspernatur quidem sint id tenetur. Consectetur, magni consequatur earum alias beatae ratione aut rerum dolorum sequi odio rem aspernatur impedit consequuntur.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, soluta, sapiente quis quae doloremque harum odit illo non magnam vero dolorum nulla debitis fuga illum minima ex quia porro ab.</p>
+		</div>
+	</div>
+	<div class="site-widgets">
+		<section class="widget">
+			<h2>Latest News</h2>
+			<ul>
+				<li>one</li>
+				<li>two</li>
+				<li>three</li>
+				<li>four</li>
+				<li>five</li>
+			</ul>
+		</section>
+		<section class="widget">
+			<h2>Recent Tutorials</h2>
+			<ol>
+				<li>one</li>
+				<li>two</li>
+				<li>three</li>
+				<li>four</li>
+				<li>five</li>
+			</ol>
+		</section>
+		<section class="widget">
+			<h2>Social Media</h2>
+			<ul>
+				<li>one</li>
+				<li>two</li>
+				<li>three</li>
+				<li>four</li>
+				<li>five</li>
+			</ul>
+		</section>
+	</div>	
+	<footer class="site-footer">
+		<div class="site-info">
+			<a href="http://youtube.com/easydevtuts">easy web development tutorials</a>
+		</div>
+	</footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
